add endpoint listing committed people groups by partner language
